--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "7.11.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-config-node": "^4.1.0",
     "eslint-config-prettier": "^8.3.0",
